--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "nextjs-boilerplate",
-  "version": "0.1.0",
+  "name": "crossover-boilerplate_nextjs-vitejs",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "next dev -p 3333",
+    "build": "next build && tsc --project tsconfig.vite.json && vite build",
+    "vite:dev": "tsc --project tsconfig.vite.json && vite --host",
+    "vite:build": "tsc --project tsconfig.vite.json && vite build",
     "start": "next start",
     "test": "jest",
     "test:watch": "yarn test --watch",
@@ -19,9 +21,10 @@
     "generate": "yarn plop --plopfile .generate/plopfile.js"
   },
   "dependencies": {
-    "next": "13.0.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "next": "^13.2.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "vite": "^4.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.2",
@@ -41,6 +44,7 @@
     "@types/react-dom": "18.0.9",
     "@typescript-eslint/eslint-plugin": "^5.44.0",
     "@typescript-eslint/parser": "^5.44.0",
+    "@vitejs/plugin-react": "^3.1.0",
     "babel-loader": "^9.1.0",
     "eslint": "^8.28.0",
     "eslint-config-next": "^13.0.5",
@@ -58,6 +62,9 @@
     "plop": "^3.1.1",
     "prettier": "^2.8.0",
     "ts-node": "^10.9.1",
-    "typescript": "4.9.3"
+    "typescript": "4.9.3",
+    "vite-plugin-css-injected-by-js": "^3.1.0",
+    "vite-plugin-environment": "^1.1.3",
+    "vite-tsconfig-paths": "^4.0.7"
   }
 }
